feat: dashboard product listing

--- a/src/global/colors.css
+++ b/src/global/colors.css
@@ -3,6 +3,7 @@
     --Color-brand-1: #125EA6;
     --Color-brand-2: #246293;
     --Color-light: #127cf1;
-    --gray-one: #E7E7E7;
-    --gray-one: #C7C7C7;
+    --gray-1: #E7E7E7;
+    --gray-2: #C7C7C7;
+    --light-black: #12131A;
 }
