--- a/src/global/reset.css
+++ b/src/global/reset.css
@@ -27,7 +27,7 @@ a {
 	color: white;
 	font-family: 'Poppins', sans-serif;
 }
-h1, h2, h3, p, span, label, input, li {
+h1, h2, h3, h4, p, span, label, input, li {
 	color: white;
 	font-family: 'Poppins', sans-serif;
 }
